layout for project pages

--- a/src/components/H1.astro
+++ b/src/components/H1.astro
@@ -11,7 +11,7 @@ const { text, index } = Astro.props;
   class:list={[
     index
       ? "text-6xl font-bold min-xl:text-5xl"
-      : "text-3xl font-bold min-xl:text-2xl left-0 bottom-96 -rotate-90 w-full h-full ",
+      : "text-3xl font-bold min-xl:text-2xl absolute -left-32 top-80 m-auto w-96 -rotate-90",
   ]}
 >
   {text}
