--- a/src/components/H2project-title.astro
+++ b/src/components/H2project-title.astro
@@ -7,6 +7,6 @@ interface Props {
 const { text, road } = Astro.props;
 ---
 
-<h2 class:list={[road ? "absolute top-16 left-8 text-3xl font-bold mb-12" : "absolute top-0"]}>
+<h2 class:list={[road ? "absolute italic top-12 right-28 text-2xl font-bold mb-12" : "absolute italic top-16 right-32 text-2xl font-bold mb-12" ]}>
   {text}
 </h2>
