--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -80,10 +80,10 @@ console.log(projects);
 </style>
 
 <Layout title="Hirashiki Rafael's 1st Project">
-  <div class="absolute top-0 right-12 z-50 flex flex-col items-end gap-4">
+  <div class="absolute top-0 pr-8 z-50 flex flex-col items-end gap-4 w-full">
     <Image
       src="/Images/stars-topright-road.png"
-      width={310}
+      width={260}
       height={560}
       format="png"
       alt="stars bg"
@@ -98,7 +98,7 @@ console.log(projects);
         height={213}
         format="png"
         alt="github logo"
-        class="url-logo-black"
+        class="url-logo-black "
       />
       <p>Github</p>
     </a>
@@ -115,7 +115,6 @@ console.log(projects);
     </a>
   </div>
 
-  <div class="grid grid-cols-8 w-full">
     <div class="col-span-3 text-right relative -right-4">
       <div class="bar blue-bar"></div>
       <div class="bar black-bar-blue"></div>
@@ -172,7 +171,7 @@ console.log(projects);
       <p class="grid-item-ball">
         Astro • TailWind • Typescript<i class="fa-solid fa-circle"></i>
       </p>
-      <p class="grid-item-ball">
+      <p class="grid-item-ball brand-blue">
         Code Testing<i class="fa-solid fa-circle"></i>
       </p>
       <p class="grid-item-ball">
@@ -207,7 +206,7 @@ console.log(projects);
       <p class="pt-24">2022</p>
       <p class="pt-64">2023</p>
       <p class="pt-96">2024</p>
-      <p class="pt-40">2025</p>
+      <p class="pt-72">2025</p>
     </div>
     <div class="col-span-3 mt-96 relative -left-4">
       <div class="bar orange-bar"></div>
@@ -243,7 +242,7 @@ console.log(projects);
       <p class="grid-item-ball grid-item-ball-reverse">
         <i class="fa-solid fa-circle"></i>Object Oriented Programming
       </p>
-      <p class="grid-item-ball grid-item-ball-reverse">
+      <p class="grid-item-ball grid-item-ball-reverse brand-orange">
         <i class="fa-solid fa-circle"></i>Data Base Management System
       </p>
       <p class="grid-item-ball grid-item-ball-reverse">
