--- a/src/components/ProjectLayout.astro
+++ b/src/components/ProjectLayout.astro
@@ -3,33 +3,58 @@ import Layout from "../layouts/Layout.astro";
 import H2ProjectTitle from "../components/H2project-title.astro";
 import { Image } from "astro:assets";
 
-const { project } = Astro.props;
+const { project, road } = Astro.props;
 
 console.log(project.data.projectBulletList);
 ---
 
+<style>
+  .fa-brands {
+    font-size: 50px;
+  }
+</style>
 <Layout>
-  <div class="grid grid-cols-6 w-full items-end absolute -top-40">
-    <Image
-      src="/Images/stars-black-topright.svg"
-      width={744}
-      height={655}
-      format="png"
-      alt="stars bg"
-      class=" col-span-7 w-full"
-    />
-    <a href={project.data.githubURL} class="flex flex-col items-center w-fit col-start-7">
+  <div
+    class="absolute -top-4 pr-8 pl-4 z-50 flex flex-col items-end gap-4 w-full"
+  >
+    <div class="pr-2 grid grid-flow-col gap-4">
+      <div class="pt-10 flex flex-wrap gap-2 h-fit">
+        {
+          project.data.technologies.map((ele: string, index: number) => (
+            <Image
+              src={`/Images/logo_${ele}.png`}
+              width={30}
+              height={30}
+              format="png"
+              alt="stars bg"
+              class=""
+            />
+          ))
+        }
+      </div>
+      <Image
+        src="/Images/stars-topright-black.png"
+        width={700}
+        height={800}
+        format="png"
+        alt="stars bg"
+      />
+    </div>
+
+    <H2ProjectTitle text={project.data.projectTitle} />
+
+    <a href={project.data.githubURL} class="flex flex-col items-center w-fit">
       <Image
         src="/Images/logo_github.png"
         width={144}
         height={213}
         format="png"
         alt="github logo"
-        class="url-logo-black "
+        class="url-logo-black"
       />
       <p>Github</p>
     </a>
-    <a href={project.data.figmaURL} class="flex flex-col items-center w-fit col-start-7">
+    <a href={project.data.figmaURL} class="flex flex-col items-center w-fit">
       <Image
         src="/Images/logo_figma.svg"
         width={144}
@@ -40,15 +65,34 @@ console.log(project.data.projectBulletList);
       />
       <p>Figma</p>
     </a>
-    <a href={project.data.projectURL} class="flex flex-col items-center w-fit col-start-7">
-      <span class="url-logo-black"> open_in_new</span>
+    <a href={project.data.projectURL} class="flex flex-col items-center w-fit">
+      <i class="fa-solid fa-arrow-up-right-from-square url-logo-black"></i>
       <p>Project</p>
     </a>
   </div>
-  <H2ProjectTitle text={project.data.projectTitle} />
-  <img src={`/Images/${project.data.thumbnail}.jpg`} />
-  <p>{project.data.projectSubtitle}</p>
-  <ul>
-    {project.data.projectBulletList.map((option: string) => <li>❍{option}</li>)}
-  </ul>
+  <div class="col-start-2 col-span-6 relative ">
+    <img src={`/Images/${project.data.thumbnail}.jpg`} />
+    <p class="py-4">{project.data.projectSubtitle}</p>
+    <ul class="py-8">
+      {
+        project.data.projectBulletList.map((option: string) => (
+          <li>❍{option}</li>
+        ))
+      }
+    </ul>
+    <div class="grid grid-cols-2 gap-4">
+      {
+        project.data.thumbnail_extra.map((ele: string, index: number) => (
+          <Image
+            src={`/Images/${ele}.png`}
+            width={500}
+            height={500}
+            format="png"
+            alt="stars bg"
+            class=""
+          />
+        ))
+      }
+    </div>
+  </div>
 </Layout>
