--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,9 +37,11 @@ const projects = await getCollection("projects");
     <ViewTransitions />
 
     <!-- Font -->
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/2a7d8b909e.js"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"></script> -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+      
   </head>
 
   <body
@@ -55,15 +57,15 @@ const projects = await getCollection("projects");
     /> -->
     <Header
       headerIntro={headerIntro}
-      class={`w-full h-screen col-start-1 ${
+      class={`relative w-full h-screen col-start-1 ${
         headerIntro ? "col-span-5" : "col-span-4"
       } clr-bg py-8 grid grid-cols-5`}
     />
     <Main
       projects={projects}
-      class={`w-full h-screen ${
-        headerIntro ? "col-span-7" : "col-span-8"
-      }  max-md:px-24 relative overflow-y-scroll css-no-scrollbar`}
+      class={`relative w-full h-screen ${
+        headerIntro ? "col-span-7" : "col-span-8 overflow-y-scroll"
+      }  max-md:px-24 css-no-scrollbar grid grid-cols-8 pt-40`}
     >
       <slot />
     </Main>
@@ -126,6 +128,7 @@ const projects = await getCollection("projects");
       html,
       body {
         font-family: "Roboto", sans-serif;
+        color: #333333;
       }
 
       a:hover {
@@ -159,7 +162,7 @@ const projects = await getCollection("projects");
         line-height: 1.8;
       }
 
-      .photo_div {
+      .css-photo_div {
         border-radius: 50%;
         width: fit-content;
       }
@@ -169,6 +172,8 @@ const projects = await getCollection("projects");
         height: 40px;
         border-radius: 5px;
         padding: 4px;
+        font-size: 30px;
+        color: white;
       }
 
       .url-logo {
@@ -185,7 +190,7 @@ const projects = await getCollection("projects");
         margin: auto;
         color: var(--clr-coder);
       }
-      
+
       .css-no-scrollbar {
         -ms-overflow-style: none; /* IE and Edge */
         scrollbar-width: none; /* Firefox */
