--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,34 +3,38 @@ import { Image } from "astro:assets";
 import H1 from "./H1.astro";
 import RafaPic from "./Rafa-pic.astro";
 
-const { headerIntro, class: className, ...rest } = Astro.props;
+const { headerIndex, class: className, ...rest } = Astro.props;
 ---
 
 <header class={className} {...rest}>
   <H1 text="HIRASHIKI RAFAEL" index={false} />
-  <p class="absolute bottom-0">powered by Astro</p>
+  <!-- <p class="absolute bottom-0">powered by Astro</p> -->
   <Image
-    src="/Images/stars-topleft.svg"
+    src={headerIndex
+      ? "/Images/stars-topleft-index.svg"
+      : "/Images/stars-topleft.svg"}
     width={220}
     height={40}
     format="svg"
     alt="stars bg"
-    class="fixed z-50"
+    class="fixed top-8 z-10"
   />
   <div
-    class="col-start-2 col-span-4 flex flex-col justify-between h-full pt-24 pb-12 pr-4 relative"
+    class="relative col-start-2 col-span-4 flex flex-col justify-between h-full pt-24  pr-4 "
   >
     <Image
-      src="/Images/stars-bottomleft.svg"
-      width={55}
-      height={40}
+      src={headerIndex
+        ? "/Images/stars-bottomleft-index.svg"
+        : "/Images/stars-bottomleft.svg"}
+      width={440}
+      height={450}
       format="svg"
       alt="stars bg"
-      class="absolute bottom-0 -left-8 z-50"
+      class="absolute bottom-0 -left-12 z-10"
     />
 
     {
-      headerIntro ? (
+      headerIndex ? (
         <>
           <section class="self-start">
             <H1 text="HIRASHIKI RAFAEL" index={true} />
@@ -56,7 +60,7 @@ const { headerIntro, class: className, ...rest } = Astro.props;
             <p>Special interest in health, environment and nature fields</p>
           </section>
 
-          <nav class="self-end justify-self-end relative z-50">
+          <nav class="self-end justify-self-end relative z-50 pb-24">
             <ul>
               <li class="">
                 <a
@@ -73,7 +77,7 @@ const { headerIntro, class: className, ...rest } = Astro.props;
       ) : (
         <>
           <RafaPic class=" w-4/6 m-auto" />
-          <nav>
+          <nav class="pb-24 relative z-50">
             <ul>
               <li>
                 <a
