--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import { Image } from "astro:assets";
 import RafaPic from "../components/Rafa-pic.astro";
 ---
 
-<Layout title="Hirashiki Rafael's Nifty Journey on the web" headerIntro={true}>
+<Layout title="Hirashiki Rafael's Nifty Journey on the web" headerIndex={true}>
   <RafaPic class="css-photo_div absolute z-20 -top-40 bottom-0 left-48 m-auto h-fit w-5/12 "/>
   <div class="absolute z-30 top-0 bottom-0 left-16 m-auto h-fit max-w-fit w-6/6" >
     <Image
