--- a/src/components/ProjectLayout-Links.astro
+++ b/src/components/ProjectLayout-Links.astro
@@ -4,6 +4,11 @@ import { Image } from "astro:assets";
 
 const { project, road } = Astro.props;
 ---
+<style>
+  a p {
+    font-size: 12px;
+  }
+</style>
 
 <div class="absolute -top-4 px-8 z-50 flex flex-col items-start gap-4 w-full">
   <div class="relative">
@@ -15,7 +20,7 @@ const { project, road } = Astro.props;
       height={!road ? 800 : 560}
       format="png"
       alt="stars bg"
-      class="pl-3"
+      class="pl-2"
     />
     <H2ProjectTitle text={!road ? project?.data.projectTitle : "RoadMap"} />
   </div>
@@ -70,7 +75,7 @@ const { project, road } = Astro.props;
   }
   {
     project && (
-      <div class="flex flex-col gap-2 h-fit pl-2">
+      <div class="flex flex-col gap-2 h-fit pl-1">
         {project.data.technologies?.map((ele: string, index: number) => (
           <Image
             src={`/Images/logo_${ele}.png`}
@@ -89,7 +94,7 @@ const { project, road } = Astro.props;
     road && (
       <a
         href="https://www.linkedin.com/in/rafael-hirashiki-7a5733170/"
-        class="flex flex-col item-center w-fit"
+        class="flex flex-col items-center w-fit"
       >
         <Image
           src="/Images/logo_linkedin.png"
@@ -97,7 +102,7 @@ const { project, road } = Astro.props;
           height={213}
           format="png"
           alt="linkedin logo"
-          class="url-logo-black url-logo"
+          class="url-logo"
         />
         <p>Linkedin</p>
       </a>
