--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -71,6 +71,10 @@ import ProjectLayoutLinks from "../components/ProjectLayout-Links.astro";
     background-color: #000;
     z-index: -1;
   }
+
+  .ball-black .fa-circle {
+    color: black;
+  }
 </style>
 
 <Layout title="Hirashiki Rafael's 1st Project">
@@ -134,29 +138,29 @@ import ProjectLayoutLinks from "../components/ProjectLayout-Links.astro";
     <p class="grid-item-ball brand-blue">
       Code Testing<i class="fa-solid fa-circle"></i>
     </p>
-    <p class="grid-item-ball">
+    <p class="grid-item-ball ball-black">
       Project: System Development •<br />Backend (Nest.js Typescript)<i
         class="fa-solid fa-circle"></i>
     </p>
-    <p class="grid-item-ball">
+    <p class="grid-item-ball ball-black">
       Python Project<i class="fa-solid fa-circle"></i>
     </p>
-    <h3 class="grid-item-ball">
+    <h3 class="grid-item-ball ball-black">
       Level Up Dev Skills<i class="fa-solid fa-circle"></i>
     </h3>
-    <p class="grid-item-ball">
+    <p class="grid-item-ball ball-black">
       Keep exploring technologies according to the market.
       <i class="fa-solid fa-circle"></i>
     </p>
-    <p class="grid-item-ball">
+    <p class="grid-item-ball ball-black">
       Enhance skills according to work and challenges.<i
         class="fa-solid fa-circle"></i>
     </p>
-    <p class="grid-item-ball">
+    <p class="grid-item-ball ball-black">
       Strengthen planning, problem solving and systematic thinking. <i
         class="fa-solid fa-circle"></i>
     </p>
-    <h3 class="grid-item-ball">
+    <h3 class="grid-item-ball ball-black">
       Explore Data Science<br />Mid Developer (System, Front or Full Stack)
       <i class="fa-solid fa-circle"></i>
     </h3>
@@ -202,29 +206,29 @@ import ProjectLayoutLinks from "../components/ProjectLayout-Links.astro";
     <p class="grid-item-ball grid-item-ball-reverse">
       <i class="fa-solid fa-circle"></i>Object Oriented Programming
     </p>
-    <p class="grid-item-ball grid-item-ball-reverse brand-orange">
+    <p class="grid-item-ball grid-item-ball-reverse brand-orange ">
       <i class="fa-solid fa-circle"></i>Data Base Management System
     </p>
-    <p class="grid-item-ball grid-item-ball-reverse">
+    <p class="grid-item-ball grid-item-ball-reverse  ball-black">
       <i class="fa-solid fa-circle"></i>Web Development
     </p>
-    <p class="grid-item-ball grid-item-ball-reverse">
+    <p class="grid-item-ball grid-item-ball-reverse  ball-black">
       <i class="fa-solid fa-circle"></i>Smart Data Structures
     </p>
-    <p class="grid-item-ball grid-item-ball-reverse">
+    <p class="grid-item-ball grid-item-ball-reverse  ball-black">
       <i class="fa-solid fa-circle"></i>Mobile Development
     </p>
-    <p class="grid-item-ball grid-item-ball-reverse">
+    <p class="grid-item-ball grid-item-ball-reverse  ball-black">
       <i class="fa-solid fa-circle"></i>Microservices & Containers
     </p>
-    <p class="grid-item-ball grid-item-ball-reverse">
+    <p class="grid-item-ball grid-item-ball-reverse ball-black">
       <i class="fa-solid fa-circle"></i>Compliance, Quality Control and IT
       Strategies
     </p>
-    <p class="grid-item-ball grid-item-ball-reverse">
+    <p class="grid-item-ball grid-item-ball-reverse ball-black">
       <i class="fa-solid fa-circle"></i>CyberSecurity
     </p>
-    <h3 class="grid-item-ball grid-item-ball-reverse">
+    <h3 class="grid-item-ball grid-item-ball-reverse ball-black">
       <i class="fa-solid fa-circle"> </i>
        MBA
     </h3>
