--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,12 +5,22 @@ import RafaPic from "../components/Rafa-pic.astro";
 ---
 
 <Layout title="Hirashiki Rafael's Nifty Journey on the web" headerIndex={true}>
+  <div class="absolute z-30 top-0 bottom-0 left-0 h-fit  w-6/6" >
+    <Image
+      src="/Images/stars-right-index.svg"
+      width={1000}
+      height={1000}
+      format="svg"
+      alt="web development applications icons and logos"
+      class=""
+    />
+  </div>
   <RafaPic class="css-photo_div absolute z-20 -top-40 bottom-0 left-48 m-auto h-fit w-5/12 "/>
   <div class="absolute z-30 top-0 bottom-0 left-16 m-auto h-fit max-w-fit w-6/6" >
     <Image
       src="/Images/logos.png"
-      width={900}
-      height={900}
+      width={750}
+      height={750}
       format="png"
       alt="web development applications icons and logos"
       class=""
@@ -26,4 +36,6 @@ import RafaPic from "../components/Rafa-pic.astro";
       class=""
     />
   </div>
+  
 </Layout>
+
